# Openworld

./: CMakeLists.txt  README.md  main.cpp
assets/shaders/: basic.vert  sprite.vert
assets/shaders/outline/: outline.geom
assets/shaders/text/: text.frag
core/: FPSCounter.cpp  FPSCounter.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  Frustum.cpp  Frustum.hpp  LevelManager.cpp  LevelManager.hpp  ResourceManager.hpp  Shader.hpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  Version.hpp
core/physics/: Collider.cpp  PhysicsWorld.cpp  PhysicsWorld.hpp
glad/src/: glad.c
objects/: Cube.cpp  Cube.hpp  Flattri.hpp  GameObject.hpp  ObjectFactory.cpp  ObjectFactory.hpp  Plane.cpp  Plane.hpp  Player.cpp  Player.hpp  Ramp.cpp  wall.hpp
v1.0.00/: CMakeLists.txt  main.cpp
v1.0.00/assets/shaders/: sprite.frag
v1.0.00/assets/shaders/outline/: outline.frag
v1.0.00/assets/shaders/text/: text3d.frag  text3d.vert
v1.0.00/core/: AABBHelpers.hpp  FirstPersonCamera.cpp  LevelManager.cpp  LevelManager.hpp  Mesh.cpp  Mesh.hpp  ResourceManager.hpp  Shader.cpp  SpriteRenderer.cpp  TextRenderer.cpp  TextRenderer.hpp  Version.hpp
v1.0.00/core/core/: stb_easy_font.h
v1.0.00/core/physics/: Collider.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  RigidBody.cpp  RigidBody.hpp
v1.0.00/glad/include/glad/: glad.h
v1.0.00/objects/: Flatquad.cpp  Flatquad.hpp  Flattri.cpp  GameObject.cpp  GameObject.hpp  ObjectFactory.cpp  Plane.cpp  Player.cpp  Player.hpp  Ramp.hpp  wall.cpp
